[package]
name = "slinky"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
colored = "2.0"
sysinfo = "0.32.0"
terminal_size = "0.4.0"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "consoleapi", "memoryapi", "libloaderapi"] }
rust-embed = "8.0"
crossterm = "0.27"

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
incremental = false
overflow-checks = false